# mq-mcp

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  RUNBOOK.md  SAFETY_MODEL.md  SKILLS.md  TOOL_INDEX.md  VECTOR_CONTEXT.md  mypy.ini  release-check.sh  release.sh
.agent-handoff/: changes.md  review.md  spec.md  test-results.md
.claude/: settings.json
.mq/: repo-contract.json
assets/: bridget.txt  ghostty_config.ini
completions/: _mq-mcp
contracts/: release_gate_v2.schema.json
docs/: KNOWLEDGE_CONTRACT.md  LEARNING_CONTRACT.md  LEARNING_MODEL.md  LEARN_CONTRACT.md  LEARN_OLLAMA.md  OLLAMA_PROVIDER.md  ORCHESTRATION_CONTRACT.md  RELEASE_GATE_V2.md  RUNTIME_CONTRACT.md  TOOL_INVENTORY.md  TOOL_SAFETY.md  bridget-voice.md  clients.md  demo.md  ghostty.md  index.html  install.md  integration.html  integration.md  orchestration-boundary.md  profiles.md  (+6 more)
mq-mcp/: .env.example  ask.py  bridge.py  bridge.py.bak  bridget_context.py  bridget_runtime.py  bridget_safety.py  bridget_voice.py  bridget_workflow.py  codegraph_cochange.py  codegraph_snapshot.py  debug_tools.py  learn_engine.py  main.py  mqlaunch.sh  phase12_signals.py  pyproject.toml  server.py  tool_policy.py  tool_registry.py
mq-mcp/.mypy_cache/3.14/anyio/: __init__.meta.json  from_thread.data.json
mq-mcp/mq-mcp/: .gitignore  bridge.py  server.py
mq-mcp/providers/: ollama_provider.py
mq-mcp/release_gate/: __init__.py  checks.py  models.py  render.py  runner.py
mq-mcp/runtime/memory/: obsidian_writer.py
(+170 files in other folders)
