[project]
name = "mq-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.1",
    "openai>=2.36.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pyguitarpro>=0.11",
    "requests>=2.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
