[project]
name = "mq-mcp"
version = "1.10.0"
description = "Local MCP server experiments and tooling for macOS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.1",
    "openai>=2.36.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pyguitarpro>=0.11",
    "python-dotenv>=1.0.0",
    "requests>=2.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
mq-mcp = "main:main"

[tool.mypy]
python_version = "3.11"
warn_return_any = false

[[tool.mypy.overrides]]
module = ["psutil", "guitarpro", "pandas", "pandas.*"]
ignore_missing_imports = true
